# fun_of_the_gods

./: CMakeLists.txt  Class Diagram0.asta  README.md  TODO  diagrams.asta  layout.drawio
include/: cell.hpp  cell_factory.hpp  creature.hpp  creature_factory.hpp  creature_strategy.hpp  figure.hpp  game_controller.hpp  game_event.hpp  game_field.hpp  game_field_area.hpp  game_field_area_factory.hpp  game_model.hpp  observer.hpp  player.hpp  point_of_expansion.hpp  subject.hpp  user_input.hpp  view.hpp
src/: cell.cpp  cell_factory.cpp  creature.cpp  creature_factory.cpp  creature_strategy.cpp  figure.cpp  game_controller.cpp  game_field.cpp  game_field_area.cpp  game_field_area_factory.cpp  game_model.cpp  main.cpp  player.cpp  point_of_expansion.cpp  subject.cpp  user_input.cpp  view.cpp
test/: CMakeLists.txt  tests.cpp
